fix alignment

--- a/hire.css
+++ b/hire.css
@@ -21,7 +21,9 @@ body {
 
 @media screen and (max-device-width: 480px) and (orientation: portrait) {
   header {
-    max-width: 350px;
+  	margin-left: auto;
+    margin-right: auto;
+    max-width: 800px;
   }
 
   #header_separator {
