--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
 body {
   margin-left: auto;
   margin-right: auto;
+  max-width: 1000px;
   font-family: helvetica,sans-serif;
   text-align: justify;
   margin-bottom: 15%;
@@ -15,10 +16,6 @@ header {
 
 @media screen and (min-width: 1024px){
 
-  body {
-    max-width: 1000px;
-  }
-
   #header_separator {
     height: 15vh;
   }
@@ -26,7 +23,9 @@ header {
 
 @media screen and (max-device-width: 480px) and (orientation: portrait){
   
-  body {
+  header {
+    margin-left: auto;
+    margin-right: auto;
     max-width: 350px;
   }
 
